kubernetes/apps/podgrab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podgrab
spec:
  selector:
    app: podgrab
  ports:
    - protocol: TCP
      port: 8080
