kubernetes/apps/podgrab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podgrab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - podgrab.immortalkeep.com
      secretName: podgrab-ingress-tls
  rules:
    - host: podgrab.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: podgrab
                port:
                  number: 8080
